[package]
name = "fractic-aws-cognito"
version = "0.1.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1.72"
aws-config = "0.55.3"
aws-sdk-cognitoidentityprovider = "0.28.0"
fractic-core = { git = "https://github.com/fractic-io/rust-core.git" }
fractic-env-config = { git = "https://github.com/fractic-io/rust-env-config.git" }
fractic-generic-server-error = { git = "https://github.com/fractic-io/rust-generic-server-error.git" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }