[package]
name = "fractic-aws-cognito"
version = "0.1.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1.80"
aws-config = "1.5.1"
aws-sdk-cognitoidentityprovider = "1.35.0"
fractic-core = { git = "https://github.com/fractic-io/rust-core.git" }
fractic-env-config = { git = "https://github.com/fractic-io/rust-env-config.git" }
fractic-generic-server-error = { git = "https://github.com/fractic-io/rust-generic-server-error.git" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
